correction in test for java version